fix cors lasted version